@@ -213,6 +213,10 @@ fi
 
 replace_all doc/README
 replace_all doc/unbound.8
+replace_all doc/unbound.conf.5
+replace_all doc/unbound-checkconf.8
+replace_all doc/unbound-host.1
+replace_all doc/libunbound.3
 
 info "Renaming Unbound directory to unbound-$version."
 cd ..
